[gd_scene load_steps=11 format=2]

[ext_resource path="res://Backgrounds/blue_desert.png" type="Texture" id=1]
[ext_resource path="res://UI/Kenney Future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/GameOver.gd" type="Script" id=3]
[ext_resource path="res://Audio/correct.ogg" type="AudioStream" id=4]
[ext_resource path="res://Audio/lose1.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 2.0
content_margin_right = 2.0

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="GameOver" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -206.813
margin_right = 1024.0
margin_bottom = 817.187
texture = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 136.831
margin_top = 5.37177
margin_right = 840.831
margin_bottom = 116.372
custom_fonts/font = SubResource( 1 )
text = "Answer a question to
 continue!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Operand1" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 472.793
margin_top = 152.801
margin_right = 596.793
margin_bottom = 220.801
custom_fonts/font = SubResource( 1 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Operand2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 475.479
margin_top = 214.576
margin_right = 599.479
margin_bottom = 282.576
custom_fonts/font = SubResource( 1 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Operator" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 365.358
margin_top = 209.205
margin_right = 489.358
margin_bottom = 277.205
custom_fonts/font = SubResource( 1 )
text = "+"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line-To-Be-Replaced" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 443.248
margin_top = 252.179
margin_right = 603.248
margin_bottom = 320.179
custom_fonts/font = SubResource( 1 )
text = "____"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer" type="LineEdit" parent="."]
margin_left = 462.0
margin_top = 317.0
margin_right = 621.0
margin_bottom = 381.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
align = 2
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="Button" parent="."]
margin_left = 633.0
margin_top = 424.0
margin_right = 818.0
margin_bottom = 494.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Check"

[node name="TryAgainButton" type="Button" parent="."]
margin_left = 633.0
margin_top = 424.0
margin_right = 818.0
margin_bottom = 494.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Try Again"

[node name="GoButton" type="Button" parent="."]
margin_left = 633.0
margin_top = 424.0
margin_right = 818.0
margin_bottom = 494.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "GO!"

[node name="ExitButton" type="Button" parent="."]
margin_left = 256.228
margin_top = 421.689
margin_right = 441.228
margin_bottom = 491.689
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Exit"

[node name="Correct" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Incorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="pressed" from="CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="GoButton" to="." method="_on_GoButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
